--- a/index.html
+++ b/index.html
@@ -9,25 +9,37 @@
 			<link rel="stylesheet" href="css/helpers.css">
 		</head>
 		<body>
-			<h1 class="mainTitle" role="banner"><a href="./" rel="index">Hexagon example</a></h1>
-			<nav class="mainNavigation" role="navigation">
+			<h1 class="mainTitle"><a href="./" rel="index">Hexagon example</a></h1>
+			<nav class="mainNavigation">
 				<h2 class="visuallyHidden">Menu</h2>
-				<ul class="mainNavigation-list hexagonContainer hexagonContainer--3d clearfix">
-					<li class="hexagon hexagon--top"><a href="#o-nas" class="hexagon-link">O&nbsp;nas</a></li>
-					<li class="hexagon hexagon--top"><a href="#oferta" class="hexagon-link">Oferta</a></li>
-					<li class="hexagon hexagon--top"><a href="#kontakt" class="hexagon-link">Kontakt</a></li>
-					<li class="hexagon hexagon--clear hexagon--padded" aria-hidden="true"></li>
-					<li class="hexagon" aria-hidden="true"></li>
-					<li class="hexagon hexagon--clear" aria-hidden="true"></li>
-					<li class="hexagon"><a href="#realizacje" class="hexagon-link">Realizacje</a></li>
-					<li class="hexagon tooltip">&copy; <span class="tooltip-content">Copyright 2014 by <a href="//comandeer.pl" rel="author">Comandeer</a></span></li>
+				<ul class="mainNavigation-list hexagonContainer hexagonContainer--3d clearfix" id="menu" tabindex="-1">
+					<li class="hexagon hexagon--top">
+						<a href="#o-nas" class="hexagon-inner">O&nbsp;nas</a>
+					</li>
+					<li class="hexagon hexagon--top">
+						<a href="#oferta" class="hexagon-inner">Oferta</a>
+					</li>
+					<li class="hexagon hexagon--top">
+						<a href="#kontakt" class="hexagon-inner">Kontakt</a>
+					</li>
+					<li class="hexagon hexagon--clear hexagon--padded hexagon--empty" aria-hidden="true"></li>
+					<li class="hexagon hexagon--empty" aria-hidden="true"></li>
+					<li class="hexagon hexagon--clear hexagon--empty" aria-hidden="true"></li>
+					<li class="hexagon">
+						<a href="#realizacje" class="hexagon-inner">Realizacje</a>
+					</li>
+					<li class="hexagon">
+						<span class="hexagon-inner tooltip" tabindex="0">©
+							<span class="tooltip-content">Copyright 2014 by <a href="https://www.comandeer.pl" rel="author">Comandeer</a></span>
+						</span>
+					</li>
 				</ul>
 			</nav>
-			<main class="content" role="main">
-				<section id="o-nas" class="section" role="region">
+			<main class="content">
+				<section id="o-nas" class="section" tabindex="-1">
 					<header class="section-header clearfix">
 						<h2 class="section-title">O nas</h2>
-						<a href="#" class="section-closeLink" aria-hidden="true" title="Zamknij">&times;</a>
+						<a href="#menu" class="section-closeLink" title="Zamknij">×</a>
 					</header>
 					<div class="section-content">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed dignissim lorem. In pellentesque nulla ut quam tincidunt, id feugiat nunc bibendum. Sed consectetur sem odio, suscipit consectetur purus pulvinar id. Nulla accumsan tortor eu turpis vehicula suscipit. In accumsan libero sem. Cras neque diam, mattis et leo a, feugiat faucibus tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempor lorem sit amet nunc fringilla, in tempor elit malesuada. Suspendisse potenti. Duis porttitor nisl in quam egestas, ac tristique leo congue. Integer eget varius est, vel tempor eros. Nulla varius porttitor felis, nec posuere nulla eleifend ac. Nulla facilisi. Nulla suscipit libero semper massa vulputate, vitae pharetra libero fringilla.</p>
@@ -42,10 +54,10 @@
 					</div>
 				</section>
 
-				<section id="oferta" class="section" role="region">
+				<section id="oferta" class="section" tabindex="-1">
 					<header class="section-header clearfix">
 						<h2 class="section-title">Oferta</h2>
-						<a href="#" class="section-closeLink" aria-hidden="true" title="Zamknij">&times;</a>
+						<a href="#menu" class="section-closeLink" title="Zamknij">×</a>
 					</header>
 					<div class="section-content">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed dignissim lorem. In pellentesque nulla ut quam tincidunt, id feugiat nunc bibendum. Sed consectetur sem odio, suscipit consectetur purus pulvinar id. Nulla accumsan tortor eu turpis vehicula suscipit. In accumsan libero sem. Cras neque diam, mattis et leo a, feugiat faucibus tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempor lorem sit amet nunc fringilla, in tempor elit malesuada. Suspendisse potenti. Duis porttitor nisl in quam egestas, ac tristique leo congue. Integer eget varius est, vel tempor eros. Nulla varius porttitor felis, nec posuere nulla eleifend ac. Nulla facilisi. Nulla suscipit libero semper massa vulputate, vitae pharetra libero fringilla.</p>
@@ -60,10 +72,10 @@
 					</div>
 				</section>
 
-				<section id="kontakt" class="section" role="region">
+				<section id="kontakt" class="section" tabindex="-1">
 					<header class="section-header clearfix">
 						<h2 class="section-title">Kontakt</h2>
-						<a href="#" class="section-closeLink" aria-hidden="true" title="Zamknij">&times;</a>
+						<a href="#menu" class="section-closeLink" title="Zamknij">×</a>
 					</header>
 					<div class="section-content">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed dignissim lorem. In pellentesque nulla ut quam tincidunt, id feugiat nunc bibendum. Sed consectetur sem odio, suscipit consectetur purus pulvinar id. Nulla accumsan tortor eu turpis vehicula suscipit. In accumsan libero sem. Cras neque diam, mattis et leo a, feugiat faucibus tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempor lorem sit amet nunc fringilla, in tempor elit malesuada. Suspendisse potenti. Duis porttitor nisl in quam egestas, ac tristique leo congue. Integer eget varius est, vel tempor eros. Nulla varius porttitor felis, nec posuere nulla eleifend ac. Nulla facilisi. Nulla suscipit libero semper massa vulputate, vitae pharetra libero fringilla.</p>
@@ -78,10 +90,10 @@
 					</div>
 				</section>
 
-				<section id="realizacje" class="section" role="region">
+				<section id="realizacje" class="section" tabindex="-1">
 					<header class="section-header clearfix">
 						<h2 class="section-title">Realizacje</h2>
-						<a href="#" class="section-closeLink" aria-hidden="true" title="Zamknij">&times;</a>
+						<a href="#menu" class="section-closeLink" title="Zamknij">×</a>
 					</header>
 					<div class="section-content">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sed dignissim lorem. In pellentesque nulla ut quam tincidunt, id feugiat nunc bibendum. Sed consectetur sem odio, suscipit consectetur purus pulvinar id. Nulla accumsan tortor eu turpis vehicula suscipit. In accumsan libero sem. Cras neque diam, mattis et leo a, feugiat faucibus tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tempor lorem sit amet nunc fringilla, in tempor elit malesuada. Suspendisse potenti. Duis porttitor nisl in quam egestas, ac tristique leo congue. Integer eget varius est, vel tempor eros. Nulla varius porttitor felis, nec posuere nulla eleifend ac. Nulla facilisi. Nulla suscipit libero semper massa vulputate, vitae pharetra libero fringilla.</p>
@@ -106,5 +118,6 @@
 					</div>
 				</section>
 			</main>
+			<script src="js/main.js"></script>
 		</body>
 	</html>
